Adding a few details.